security/muffin-currency-authorization.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: muffin-currency-authorization
  namespace: default
spec:
  selector:
    matchLabels:
      app: muffin-currency
  action: ALLOW

  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/default/sa/muffin-wallet
              - cluster.local/ns/default/sa/default
